fixed the overflow porblem

--- a/style/style.css
+++ b/style/style.css
@@ -170,6 +170,12 @@ nav {
 /* for mobile view */
 
 @media screen and (max-width: 576px) {
+
+    body
+    {
+        width: 90%;
+        margin: 0 auto;
+    }
     nav 
     {
         flex-direction: column;
